# python-sdk

./: README.md  pyproject.toml
.github/workflows/: code-review.yml  pr-review.yml  test.yml
examples/: basic.py  django_view.py  fastapi_app.py  flask_app.py
src/xident/: __init__.py  _client.py  _config.py  _http_client.py  _types.py  errors.py
src/xident/resources/: __init__.py  verification.py  webhooks.py
src/xident/responses/: __init__.py  init_result.py  session_result.py
tests/: conftest.py  test_client.py  test_config.py  test_errors.py  test_http_client.py  test_session_result.py  test_verification.py  test_webhooks.py
