[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xident"
version = "1.0.0"
description = "Official Python SDK for Xident age & identity verification"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Xident", email = "support@xident.io" },
]
keywords = ["xident", "age-verification", "identity", "kyc", "sdk"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25",
]

[project.urls]
Homepage = "https://xident.io"
Documentation = "https://docs.xident.io"
Repository = "https://github.com/xident-io/python-sdk"
Changelog = "https://github.com/xident-io/python-sdk/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "respx>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xident"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]
